--- a/protofolio.html
+++ b/protofolio.html
@@ -109,11 +109,11 @@
                     experience, enabling online presence and interaction.</p>
             </article>
             <article class="services-article">
-                <img src="python.png" alt="">
-                <h2>Python Programming</h2>
+                <img src="java.png" alt="">
+                <h2>Java Programming</h2>
                 <p>
 
-                 Python is extensively applied in data science, data analysis, machine learning, data engineering, web development, software development, and other fields.</p>
+                   Java can be applied across a wide range of software development areas, including Android and web development, enterprise-level business applications, desktop applications, game development, big data technologies, and Internet of Things (IoT) devices.</p>
             </article>
         </div>
     </section>
@@ -139,7 +139,7 @@
             </article>
             <article class="skill-article">
 
-                <h4>Python</h4>
+                <h4>Java</h4>
             </article>
             <article class="skill-article">
 
@@ -147,7 +147,7 @@
             </article>
             <article class="skill-article">
 
-                <h4>Testing</h4>
+                <h4>React.js</h4>
             </article>
             <article class="skill-article">
 
@@ -219,4 +219,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
